# Murmr

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  LICENSE  MAC-INSTALL.md  README.md  hud.html  index.html  onboarding.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build-macos.yml  build-windows.yml  mac-check.yml  release.yml
.keys/: license-pub.key
.tauri/: updater.key.pub
scripts/: issue-license.mjs  release-beta.mjs  run-tauri.mjs  serve-updater.mjs
src/: main.tsx
src-tauri/: .gitignore  Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/runtime/: README.txt
src-tauri/src/: controller.rs  lib.rs  main.rs  notifications.rs  perf_log.rs  settings.rs  sounds.rs
src-tauri/src/audio/: capture.rs  mod.rs  resample.rs
src-tauri/src/audio_duck/: mod.rs  windows_impl.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/schema/: 001_initial.sql  002_filler_counts.sql  003_milestones_and_filler_events.sql
src-tauri/src/focus/: macos.rs  mod.rs  windows.rs
src-tauri/src/hotkey/: mod.rs
src-tauri/src/injector/: mod.rs
src-tauri/src/license/: mod.rs
src-tauri/src/permissions/: mod.rs
src-tauri/src/transcribe/: mod.rs  postprocess.rs
src/hooks/: UpdaterContext.tsx  useDictationStatus.ts  useTheme.ts  useUpdater.ts
src/lib/: format.ts  ipc.ts  license.ts  theme.ts  waveform.ts
src/styles/: globals.css
src/windows/hud/: App.tsx  Recording.tsx  ResultPopup.tsx  Thinking.tsx  hud.css  main.tsx
src/windows/main/: App.tsx  Paywall.tsx  ReleaseNotes.tsx  Sidebar.tsx  UpdateBanner.tsx
src/windows/main/pages/: Advanced.tsx  Dictionary.tsx  General.tsx  Home.tsx  HotkeyCapture.tsx  Hotkeys.tsx  Insights.tsx  LicensePanel.tsx  Microphone.tsx  Permissions.tsx  PlaceholderPage.tsx  Preferences.tsx  settings-ui.tsx
src/windows/onboarding/: App.tsx  main.tsx  onboarding.css
src/windows/onboarding/steps/: Done.tsx  HotkeyChoice.tsx  MacPermissionSteps.tsx  MacPermissions.tsx  MicTest.tsx  ModelReady.tsx  Name.tsx  PermissionStep.tsx  Permissions.tsx  Practice.tsx  StepFrame.tsx  Welcome.tsx
tools/: changelog-page.html  key-generator.html
vendor-rdev/src/macos/: common.rs  grab.rs
