[package]
name = "murmr"
version = "0.1.26"
description = "Murmr — privacy-first local voice dictation"
authors = ["Murmr"]
edition = "2021"

[lib]
name = "murmr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Tuned release profile. LTO is the big one — whisper.cpp's FFI calls
# get inlined across the boundary, which roughly 2× speeds up
# transcribe time on the same model.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `devtools` enables Ctrl+Shift+I in release builds. Useful while we're
# beta-testing — a future v1.0 should drop this so end users can't crack
# open the JS console.
tauri = { version = "2", features = ["tray-icon", "image-png", "devtools", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio capture + processing
cpal = "0.15"
rubato = "0.16"
hound = "3.5"
rodio = { version = "0.20", default-features = false, features = ["wav"] }

# Local Whisper transcription.
# - `raw-api` re-exports whisper-rs-sys so we can hook ggml's own logging
#   callback (CPU feature detection + threading info).
# - `openmp` is the BIG one: without it, whisper.cpp falls back to a
#   single-threaded path inside the inner GEMM loops. CPU-bound transcribe
#   takes ~5-7× longer (e.g. 7200ms vs 1200ms for 3s audio on a Ryzen 9
#   5900X). Note this requires libgomp/MSVC OpenMP runtime to be present
#   on the user's machine — modern Windows + macOS already ship it.
whisper-rs = { version = "0.16", default-features = false, features = ["raw-api", "openmp"] }

# Global hotkey (rdev fires on bare modifiers; tauri-plugin-global-shortcut
# does not). See plan §13 #5.
# `unstable_grab` enables `rdev::grab()` (vs `listen()` which is observation-
# only), so we can SUPPRESS the keypress when it matches a bound dictation
# key — otherwise binding to e.g. `~` types tildes into the focused app on
# every press.
rdev = { version = "0.5", features = ["unstable_grab"] }

# Clipboard + keystroke synthesis for text injection
arboard = "3"
enigo = "0.6"

# Persistent storage
rusqlite = { version = "0.39", features = ["bundled"] }

# Logging + utility
log = "0.4"
parking_lot = "0.12"
thiserror = "2"
crossbeam-channel = "0.5"
regex = "1"

# Win32 APIs for HUD positioning (focus module).
# - windows-sys: lightweight legacy bindings (GetGUIThreadInfo, GetForegroundWindow)
# - windows:     full COM bindings for UI Automation (modern apps' focused element)
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_UI_Accessibility",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
] }

# macOS: enable Metal acceleration for Whisper. On Apple Silicon this offloads
# the encoder/decoder to the GPU and typically delivers 3-5× speedup over CPU
# for the base model. The `metal` feature pulls in Apple's Metal framework
# automatically — works on Intel Macs too (with a smaller speedup) since
# every Mac since 2012 has Metal.
[target.'cfg(target_os = "macos")'.dependencies]
# Mac CPU build for now. We HAD `metal` enabled here, but ggml-metal pulls
# in `@available(macOS 13, *)` Objective-C runtime checks that emit
# `__isPlatformVersionAtLeast`, a clang_rt symbol that doesn't link cleanly
# against rust-built binaries on the GitHub macos-latest runner — we tried
# bumping deployment target via MACOSX_* and CMAKE_OSX_* and neither
# silenced the symbol. Shipping CPU-only Mac unblocks the team-distribution
# goal; M-series CPU + NEON is still fast enough for usable dictation.
# TODO: revisit Metal — likely needs explicit `-lclang_rt.osx` in RUSTFLAGS
# (see local-build workaround in scripts/run-tauri.mjs on macOS 26+).
whisper-rs = { version = "0.16", default-features = false, features = ["raw-api"] }
# Used by focus/macos.rs to query the AXUIElement of the focused text field
# and the main NSScreen's backingScaleFactor for points→pixels conversion.
core-foundation = "0.10"
core-graphics = "0.24"
objc2 = "0.6"

# Local patch: rdev 0.5.3 calls TSMGetInputSourceProperty inside its
# CGEventTap callback (on a non-main thread). On macOS 26+, dispatch_assert_queue
# crashes the app on the first key event. Vendored copy nulls out
# create_string_for_key in that path; Murmr only reads `event_type`, never `name`.
[patch.crates-io]
rdev = { path = "../vendor-rdev" }
